============================
bzr-fastimport Release Notes
============================

.. contents::

0.12 UNRELEASED

0.11 2011-08-22

Bug fixes
---------

* Fix internal error in 'bzr fast-import-info'. (Jelmer Vernooij, #730833)

* Setup.py no longer relies on bzrlib. (Jelmer Vernooij, #735201)

* Avoid Inventory.copy, which has disappeared in newer versions of Bazaar.
  (Jelmer Vernooij, #485788)

* Allow "bzr fast-import-filter" to be used without first argument.
  (Jelmer Vernooij, #792935)

* Remove --branches-path and --tags-path options from ``bzr fast-export-from-svn``.
  These options are not supported by the underlying svn-fast-export.py yet.
  (Jelmer Vernooij, #513747)

* In "plain" mode, skip tags that contain characters not valid in Git.
  (Jelmer Vernooij, #386986)

* Support exporting files that are changed into directories.
  (Henrik Nyberg, #631979)

0.10 08-Mar-2011

Changes
-------

* bzr-fastimport's file parsing and generation functionality has been exported into
  separate upstream project called python-fastimport, that it now depends on.
  python-fastimport can be retrieved from http://launchpad.net/python-fastimport.

Bug fixes
---------

* Cope with non-ascii characters in tag names. (Jelmer Vernooij, #598060)

* Cope with non-ascii characters in symbolic links. (Daniel Clemente,
   Jelmer Vernooij, #238365)

* In plain mode, don't export multiple authors. (David Kilzer, #496677)

* Fix indentation when starting p4 fails. (Jelmer Vernooij)

* SOURCE argument to bzr fast-import-filter is now optional, consistent with
  examples. (Jelmer Vernooij, #477861)

* Support new marks file format introduced in (apparently) git 1.6.
  (Ian Clatworthy, Jelmer Vernooij, Gabriel Filion, #347729)

* Allow entries without email address in user map. (Jelmer Vernooij, #576598)

* Strip leading slashes when exporting Subversion repositories.
  (Jelmer Vernooij, #477869)

* Cope with non-utf8 characters in commit messages. (Jelmer Vernooij, #444896)
