@@ -6,6 +6,12 @@ bzr-fastimport Release Notes
 
 0.12 UNRELEASED
 
+Bug fixes
+---------
+
+* Cope with non-utf8 characters in paths when importing.
+  (Jelmer Vernooij, #838980)
+
 0.11 2011-08-22
 
 Bug fixes
